# image-generator

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  config.py  main.py
src/adapters/: api_controllers.py  openai_service.py
src/domain/: models.py
src/ports/: image_service.py
